Bug 948839 - Mark special flag of drag over event true if it's consumed on content. r=smaug, a=lsblakk

--HG--
extra : rebase_source : 393a190bcdaeefbaad915f2ee525c4d496fca8bd